Adding oreilly notes export

--- a/src/export-highlights-md.handlebars
+++ b/src/export-highlights-md.handlebars
@@ -10,7 +10,7 @@ _By {{author}}_
 
 <a href="#{{location.value}}" name="{{location.value}}">Location: {{location.value}}</a>
 
-> {{text}}
+{{{quote text}}}
 >
 > ~~ _{{../title}}, {{../author}}_ {{#if note}}
 
